마크다운 보충

--- a/CH05/05-2 뷰 프로젝트 구성방법.md
+++ b/CH05/05-2 뷰 프로젝트 구성방법.md
@@ -268,3 +268,14 @@ module: {
       .....
 ```
 
+
+
+
+
+## 좀 더 
+
+https://chichi.space/2017/01/17/Vue-js%EC%97%90-VueRouter%EB%A1%9C-%EB%9D%BC%EC%9A%B0%ED%8C%85-%ED%95%98%EA%B8%B0/
+
+http://vuejs.kr/update/2017/01/08/using-vue-with-vuex-vue-rotuer/
+
+(왜 책에는 이런게 없을까? 뒤에는 있나...)
